cabal-version:      2.4
name:               parsertje
version:            0.1.0.0

extra-source-files:
    README.md

executable parsertje
    main-is:          Main.hs
    other-modules:    Types
                      Syntax
                      Lexer
                      Parser
    build-depends:    base ^>=4.14.1.0,
                      indents >= 0.5.0.1,
                      mtl >= 2.2.2,
                      parsec >= 3.1.14.0
    hs-source-dirs:   src
    default-language: Haskell2010
